public/css/src/pages/_landing.scss
section.landing {
	@include menu-gap;
	padding-bottom: 180px;
	/*fallback*/
	background: url('../img/landing.png') center;
	background: linear-gradient(transparent, rgba(0,0,0,0.7)), url('../img/landing.png') center;
	background-size: cover;
	background-repeat: no-repeat;
	@media (max-width: $mobile-container-width) {
		padding-bottom: 90px;
	}
}

.landing-container {
	margin-top: 130px;
}

h1.main-header {
	margin-top: 120px;
	color: white;
	font-family: Lato;
	font-size: 2.8125rem;
	line-height: 1.2;
	font-weight: 700;
	text-align: center;
	@media (max-width: $container-width) {
		font-size: 2rem;
	}
	@media (max-width: $mobile-container-width) {
		margin-top: 90px;
	}
}

p.info {
	margin-top: 39px;
	color: white;
	font-size: 1.5625rem;
	text-align: center;
	width: 70%;
	font-style: normal;
	@media (max-width: $sl-container-width) {
		width: 80%;
	}
}

article.main-search {
	margin-top: 64px;
	box-sizing: border-box;
	background-color: rgba(37, 37, 37, 0.8);
	border-radius: 10px 5px 5px;
	width: 87.5%;
	padding: 27px;
	margin-left: auto;
	margin-right: auto;
	@media (max-width: $container-width) {
		padding: 8px;
		width: 100%;
		padding: calc(5px + 1%);
	}
}

div.pattern {
	background: url('../img/pattern-new.png') top;
	overflow: auto;
	@media (max-width: $mobile-container-width) {
		background: white;
	}
}

section.description {
	$img-size: 217px;
	margin: 138px auto 160px auto;
	max-width: 960px;
	box-sizing: border-box;
	padding-left: $img-size + 92px;
	min-height: $img-size;
	background-image: url('../img/description.png');
	background-size: $img-size;
	background-position: top left;
	background-repeat: no-repeat;
	@media (max-width: $mobile-container-width) {
		background: none;
		padding: 0;
		margin-top: 40px;
	}
}

h1.description-title {
	font-weight: 700;
	font-size: 1.625rem;
	color: rgb(102, 102, 102);
}

p.description-text {
    color: rgb(136, 136, 136);
	font-size: 1.25rem;
	font-weight: 400;
	line-height: 1.75;
	font-style: normal;
}

.landing-header {
	text-transform: uppercase;
	padding-bottom: 16px;
	border-bottom: 1px solid rgb(215, 215, 215);
	font-size: 1.563rem;
	font-weight: 400;
	@media (max-width: $mobile-container-width) {
		padding-bottom: 20px;
		border-width: 2px;
	}
}

ul.comments {
	& > li {
		box-sizing: border-box;
		border-radius: 5px;
		padding: 30px 0;
		&:hover {
			background-color: rgb(225, 225, 225);
		}
		&:first-child:hover {
			border-radius: 0 0 5px 5px;
		}
	}
}

$image-height: 90px;
article.comment {
	position: relative;
	min-height: $image-height;
	& > div {
		display: inline-block;
	}
}

div.comment-image {
	width: $image-height;
	height: $image-height;
	box-sizing: border-box;
	border-radius: 50%;
	border: 1px solid rgb(0, 74, 128);
	overflow: hidden;
	position: absolute;
	top: 0;
	left: 20px;
	img {
		width: 90px;
		height: 90px;
	}
}

div.comment-body {
	box-sizing: border-box;
	width: 100%;
	padding-left: $image-height + 20px + 20px;
	padding-right: 20px;
}

div.comment-meta {
	font-size: 1rem;
	line-height: 1.2;
	display: flex;
	flex-wrap: wrap;
}

span.comment-author {
	color: rgb(0, 74, 128);
	margin-right: 20px;
}

span.comment-time {
	margin-right: 20px;
	color: rgb(183, 183, 183);
}

.comment-theme {
	flex-grow: 1;
	text-align: right;
	color: rgb(183, 183, 183);
	font-style: italic;
	@media (max-width: $mobile-mini-container-width) {
		flex-grow: 0;
	}
	&:hover {
		text-decoration: underline;
	}
}

p.comment-text {
	font-size: 1.25rem;
	font-style: normal;
	margin: 12px 0;
	line-height: 1.2;
}


$company-preview-width: 168px;

ul.new-companies {
	& > li {
		width: $company-preview-width;
		margin-top: 60px;
		display: inline-block;
		margin-right: 78px;
		vertical-align: top;
		&:last-child {
			margin-right: 0;
		}
	}
	@media (max-width: $container-width) {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
		& > li {
			margin-left: 10px;
			margin-right: 10px;
		}
	}
	@media (max-width: $mobile-mini-container-width) {
		justify-content: space-around;
		margin-left: 0;
		margin-right: 0;
	}
}

article.company-preview {
	box-sizing: border-box;
	border: 1px solid rgb(215, 215, 215);
	overflow: hidden;
	border-radius: 10px;
	background-color: white;
}

.p-company-logo {
	height: $company-preview-width;
	text-align: center;
	display: block;
	&:before {
		content: '';
		display: inline-block;
		vertical-align: middle;
		height: 100%;
	}
	&>img {
		vertical-align: middle;
		width: 130px;
	}
}

.p-company-title {
	color: white;
	background-color: rgb(0, 74, 128);
	font-size: 1rem;
	box-sizing: border-box;
	display: block;
	display: flex;
	justify-content: center;
	align-items: center;

	/*flexbox fallback*/
	text-align: center;
	padding: 20px 0;
}

